src/test/ui/span/borrowck-let-suggestion-suffixes.stderr
error[E0597]: `young[_]` does not live long enough
  --> $DIR/borrowck-let-suggestion-suffixes.rs:12:17
   |
LL |         v2.push(&young[0]);      // statement 4
   |                 ^^^^^^^^^ borrowed value does not live long enough
...
LL |     }
   |     - `young[_]` dropped here while still borrowed
...
LL |     (v1, v2, v3, /* v4 is above. */ v5).use_ref();
   |          -- borrow later used here

error[E0716]: temporary value dropped while borrowed
  --> $DIR/borrowck-let-suggestion-suffixes.rs:19:14
   |
LL |     v3.push(&id('x'));           // statement 6
   |              ^^^^^^^ - temporary value is freed at the end of this statement
   |              |
   |              creates a temporary which is freed while still in use
...
LL |     (v1, v2, v3, /* v4 is above. */ v5).use_ref();
   |              -- borrow later used here
   |
   = note: consider using a `let` binding to create a longer lived value

error[E0716]: temporary value dropped while borrowed
  --> $DIR/borrowck-let-suggestion-suffixes.rs:29:18
   |
LL |         v4.push(&id('y'));
   |                  ^^^^^^^ - temporary value is freed at the end of this statement
   |                  |
   |                  creates a temporary which is freed while still in use
...
LL |         v4.use_ref();
   |         -- borrow later used here
   |
   = note: consider using a `let` binding to create a longer lived value

error[E0716]: temporary value dropped while borrowed
  --> $DIR/borrowck-let-suggestion-suffixes.rs:40:14
   |
LL |     v5.push(&id('z'));
   |              ^^^^^^^ - temporary value is freed at the end of this statement
   |              |
   |              creates a temporary which is freed while still in use
...
LL |     (v1, v2, v3, /* v4 is above. */ v5).use_ref();
   |                                     -- borrow later used here
   |
   = note: consider using a `let` binding to create a longer lived value

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0597, E0716.
For more information about an error, try `rustc --explain E0597`.
